--- a/Practice/templates/index.html
+++ b/Practice/templates/index.html
@@ -34,7 +34,7 @@
                                     <div class="text-center mb-3">
                                         <div class="fw-bolder">Form submission successful!</div>
                                         <p>To activate this form, sign up at</p>
-                                        <a class="text-white" href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                        <a class="text-white" href="{{ url_for('static', filename = 'https://startbootstrap.com/solution/contact-forms')}}">https://startbootstrap.com/solution/contact-forms</a>
                                     </div>
                                 </div>
                                 <!-- Submit error message-->
@@ -116,7 +116,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="{{ url_for('static', filename = 'assests/img/testimonials-2.jpg')}}" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="{{ url_for('static', filename = 'assets/img/testimonials-2.jpg')}}" alt="..." />
                             <h5>Fred S.</h5>
                             <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
                         </div>
